--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react_app_template_2",
-  "version": "0.1.0",
+  "name": "react_app_template",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.7.4",
+    "@babel/core": "7.7.5",
     "@svgr/webpack": "4.3.3",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
@@ -15,12 +15,13 @@
     "babel-preset-react-app": "^9.1.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "connected-react-router": "^6.6.1",
     "css-loader": "3.2.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.7.2",
     "eslint-config-react-app": "^5.1.0",
-    "eslint-loader": "3.0.2",
+    "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.5.2",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
@@ -28,6 +29,7 @@
     "eslint-plugin-react-hooks": "^2.3.0",
     "file-loader": "5.0.2",
     "fs-extra": "8.1.0",
+    "history": "^4.10.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^2.1.1",
@@ -48,13 +50,16 @@
     "react-app-polyfill": "^1.0.5",
     "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.13.1",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
     "semver": "6.3.0",
     "style-loader": "1.0.1",
-    "terser-webpack-plugin": "2.2.1",
+    "terser-webpack-plugin": "2.2.2",
     "ts-pnp": "1.1.5",
     "url-loader": "3.0.0",
     "webpack": "4.41.2",
